package-update/base/deploymentconfig.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: package-update-consumer
spec:
  replicas: 1
  selector:
    service: package-update-consumer
  template:
    metadata:
      labels:
        app: thoth
        component: package-update
        service: package-update-consumer
    spec:
      containers:
        - name: package-update-consumer
          imagePullPolicy: Always
          image: package-update-job
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "1"
            limits:
              memory: "512Mi"
              cpu: "1"
          volumeMounts:
            - name: secrets
              mountPath: /mnt/secrets
              readOnly: true
      volumes:
        - name: secrets
          secret:
            secretName: "kafka"
            items:
              - key: kafka_ca.crt
                path: kafka_ca.crt
  test: false
