package-update/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: package-update-consumer
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    service: package-update-consumer
