package-update/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: package-update-consumer
spec:
  to:
    kind: Service
    name: package-update-consumer
